authentication/k8s/service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: auth-service
          image: ni04code/aaw-marketplace-auth-service:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          ports:
            - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
